# swig

./: .clang-format  CMakeLists.txt  README
.github/workflows/: ci.yml
Examples/javascript/class/: Shape.h  example.h  example.i
Lib/: swig.swg
Lib/javascript/cocos/: javascript.swg  javascriptcode.swg  javascripthelpers.swg  javascriptinit.swg  javascriptruntime.swg  javascripttypemaps.swg  std_string.i
Lib/typemaps/: attribute.swg
Source/DOH/: base.c  hash.c
Source/Modules/: cocos.cxx  javascript.cxx  swigmain.cxx  typepass.cxx
Source/Preprocessor/: cpp.c
Source/Swig/: cwrap.c  swig.h  typemap.c  typesys.c  wrapfunc.c
Tools/: CI-linux-install.sh
